--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
                 document.querySelector(".action-del-button").textContent = "Supprimer";
             }
             else {
-                document.querySelector(".counter-before").textContent = "Made happy";
+                document.querySelector(".counter-before").textContent = "Maaaade happy";
                 document.querySelector(".counter-after").textContent = "people";
                 document.querySelector(".invoice-before").textContent = "Make happy:";
                 document.querySelector(".invoice-after").textContent = "people";
