--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
             </div>
 
             <div class="counter">
-                <div class="counter-before">Made happy</div>
+                <div class="counter-before">Majjjde happy</div>
                 <div id="segments" class="counter-inner">000000</div>
                 <div class="counter-after">people</div>
             </div>
