--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
             <div class="counter">
                 <div class="counter-before">Majjjde happy</div>
                 <div id="segments" class="counter-inner">000000</div>
-                <div class="counter-after">people</div>
+                <div class="counter-after">pveople</div>
             </div>
 
             <div class="invoice">
